rnsc/tests/snapshots/error-parser-super_directive-multiple_definitions_with_trailing.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MyClass

.super firstClass trailing
.super secondClass
----- STDERR -----
[E-012] Error: unexpected trailing tokens after super class definition
   ╭─[ test_data/integration/error/parser/super_directive/multiple_definitions_with_trailing.rns:3:19 ]
   │
 3 │ .super firstClass trailing
   │                  │────┬───  
   │                  ╰────────── expected end of super class definition here
   │                       │     
   │                       ╰───── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-012
───╯
[E-011] Error: multiple .super directives
   ╭─[ test_data/integration/error/parser/super_directive/multiple_definitions_with_trailing.rns:4:1 ]
   │
 3 │ .super firstClass trailing
   │ ───┬──  
   │    ╰──── first .super directive defined here with super class 'firstClass'
 4 │ .super secondClass
   │ ───┬──  
   │    ╰──── but another .super directive defined here with super class 'secondClass'
   │ 
   │ Help: A class can only have one .super directive. Remove the duplicates.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-011
───╯
----- HASH -----
not generated
