rnsc/tests/snapshots/error-parser-type_hints-class-no_operand.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class   @class ; no operand provided
.super java/lang/Object
----- STDERR -----
[E-014] Error: '@class' type hint is missing its class name
   ╭─[ test_data/integration/error/parser/type_hints/class/no_operand.rns:1:10 ]
   │
 1 │ .class   @class ; no operand provided
   │          ───┬──│ 
   │             ╰──── forces explicit class constant pool type
   │                │ 
   │                ╰─ but class name is missing
   │ 
   │ Help: Provide the value immediately after the hint:
   │       @class <class_name>
   │       
   │       For example:
   │       @class java/lang/Object
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-014
───╯
----- HASH -----
not generated
